// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DV rejected orderinfo correctly 1`] = `
<div
  className="comp-page-wrapper"
>
  <div
    className="comp-breadcrumb-wrapper"
  >
    <div
      className="icecream-breadcrumb"
    />
  </div>
  <div
    className=""
  >
    <div
      className="comp-page-content"
    >
      <div
        className="comp-cert-detail"
      >
        <div
          className="detail-content-wrapper"
        >
          <form
            className="ant-form ant-form-horizontal cert-detail-form"
            onSubmit={[Function]}
          >
            <div
              className="comp-layout-block"
            >
              <h3
                className="layout-block-title"
              >
                订单信息
              </h3>
              <div
                className="layout-block-content"
              >
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="订单号"
                    >
                      订单号
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        123
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书备注名"
                    >
                      证书备注名
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          *.coolplayer.net 
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="产品名称"
                    >
                      产品名称
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          TrustAsia 域名型 (DV 通配符)  泛域名证书
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="创建时间"
                    >
                      创建时间
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          2017-08-09 15:56:42
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="订单状态"
                    >
                      订单状态
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          <span
                            className="status-notApproved"
                          >
                            申请失败
                          </span>
                          <i
                            aria-label="icon: info-circle"
                            className="anticon anticon-info-circle status-icon"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="info-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                              />
                              <path
                                d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </i>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书有效期"
                    >
                      证书有效期
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          1年
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="域名额度"
                    >
                      域名额度
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <span
                          className="qn-form-text"
                        >
                          *泛域名 1 个
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="已绑定域名"
                    >
                      已绑定域名
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          *.coolplayer.net(通用名称)
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="域名所有权验证"
                    >
                      域名所有权验证
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          验证类型：FILE
                          <a
                            className="comp-router-link"
                            href="https://developer.qiniu.com/ssl/manual/3667/ssl-certificate-of-free-dns-validation-guide"
                            onClick={[Function]}
                            rel="noopener"
                            style={
                              Object {
                                "marginLeft": "10px",
                              }
                            }
                            target="_blank"
                          >
                            (配置指南)
                          </a>
                        </div>
                        <div>
                          <div
                            className="dns-info"
                          >
                            <div
                              className="qn-form-text"
                            >
                              校验域名：
                              coolplayer.net
                            </div>
                            <div
                              className="qn-form-text"
                            >
                              验证文件路径：/.well-known/pki-validation/fileauth.txt
                            </div>
                            <div
                              className="qn-form-text"
                            >
                              <div>
                                验证文件值：
                                <span
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                >
                                  <a
                                    onClick={[Function]}
                                  >
                                    复制
                                  </a>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="加密算法"
                    >
                      加密算法
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        RSA
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="explain-text"
                        >
                          <i>
                            *名词解释：
                          </i>
                          “标准域名”例如：www.qiniu.com; qiniu.com；"泛域名"例如：*.qiniu.com; *.abc.qiniu.com
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            className="comp-layout-block"
            style={
              Object {
                "borderBottom": "none",
              }
            }
          >
            <h3
              className="layout-block-title"
            >
              <span>
                部署 CDN
                <i
                  aria-label="icon: info-circle"
                  className="anticon anticon-info-circle tip-icon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="info-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </i>
              </span>
            </h3>
            <div
              className="layout-block-content"
            >
              <div
                className="deploy-appointment-wrapper"
              >
                <div
                  className="ant-table-wrapper"
                >
                  <div
                    className="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
                      >
                        <span
                          className="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="ant-spin-container ant-spin-blur"
                    >
                      <div
                        className="ant-table ant-table-default ant-table-empty ant-table-scroll-position-left"
                        style={Object {}}
                      >
                        <div
                          className="ant-table-content"
                        >
                          <div
                            className="ant-table-body"
                            onScroll={[Function]}
                            onWheel={[Function]}
                            style={Object {}}
                          >
                            <table
                              className=""
                              style={Object {}}
                            >
                              <colgroup>
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                              </colgroup>
                              <thead
                                className="ant-table-thead"
                              >
                                <tr
                                  style={
                                    Object {
                                      "height": null,
                                    }
                                  }
                                >
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          域名
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            已部署证书
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            是否已经预约
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                className="ant-table-tbody"
                              />
                            </table>
                          </div>
                          <div
                            className="ant-table-placeholder"
                          >
                            <span>
                              暂无 CDN 域名可部署，
                              <a
                                className="comp-router-link"
                                href="/cdn/domain/create"
                                onClick={[Function]}
                                target="_blank"
                              >
                                立即去创建
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders certinfo correctly 1`] = `
<div
  className="comp-page-wrapper"
>
  <div
    className="comp-breadcrumb-wrapper"
  >
    <div
      className="icecream-breadcrumb"
    />
  </div>
  <div
    className=""
  >
    <div
      className="comp-page-content"
    >
      <div
        className="comp-cert-detail"
      >
        <div
          className="detail-content-wrapper"
        >
          <form
            className="ant-form ant-form-horizontal cert-detail-form"
            onSubmit={[Function]}
          >
            <div
              className="comp-layout-block"
            >
              <h3
                className="layout-block-title"
              >
                证书信息
              </h3>
              <div
                className="layout-block-content"
              >
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="订单号"
                    >
                      订单号
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <a
                          className="comp-router-link"
                          href="../../596dca4af9537d2612000004/order"
                          onClick={[Function]}
                          rel="noopener"
                          target="_blank"
                        >
                          596dca4af9537d2612000004
                        </a>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书 ID"
                    >
                      证书 ID
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          596dcf3f4ae08c3a79000001
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书备注名"
                    >
                      证书备注名
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          coco-07.coolplayer.net 
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="产品名称"
                    >
                      产品名称
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          TrustAsia 域名型 (DV)  单域名证书
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="创建时间"
                    >
                      创建时间
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          2017-07-18 17:05:03
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="生效时间"
                    >
                      生效时间
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          2017-07-18 08:00:00 ~ 2018-07-19 07:59:59
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="通用名称"
                    >
                      通用名称
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          coco-07.coolplayer.net
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="多域名(DNS Names)"
                    >
                      多域名(DNS Names)
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        --
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="加密算法"
                    >
                      加密算法
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        ECC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="comp-layout-block"
            >
              <h3
                className="layout-block-title"
              >
                操作
              </h3>
              <div
                className="layout-block-content"
              >
                <div
                  className="op-content"
                >
                  <button
                    className="ant-btn btn-href ant-btn-round"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: download"
                      className="anticon anticon-download"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="download"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </i>
                    <span>
                      下载证书
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
          <div
            className="comp-layout-block"
            style={
              Object {
                "borderBottom": "none",
              }
            }
          >
            <h3
              className="layout-block-title"
            >
              <span>
                部署 CDN
                <i
                  aria-label="icon: info-circle"
                  className="anticon anticon-info-circle tip-icon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="info-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </i>
              </span>
            </h3>
            <div
              className="layout-block-content"
            >
              <div
                className="deploy-appointment-wrapper"
              >
                <div
                  className="ant-table-wrapper"
                >
                  <div
                    className="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
                      >
                        <span
                          className="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="ant-spin-container ant-spin-blur"
                    >
                      <div
                        className="ant-table ant-table-default ant-table-empty ant-table-scroll-position-left"
                        style={Object {}}
                      >
                        <div
                          className="ant-table-content"
                        >
                          <div
                            className="ant-table-body"
                            onScroll={[Function]}
                            onWheel={[Function]}
                            style={Object {}}
                          >
                            <table
                              className=""
                              style={Object {}}
                            >
                              <colgroup>
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                              </colgroup>
                              <thead
                                className="ant-table-thead"
                              >
                                <tr
                                  style={
                                    Object {
                                      "height": null,
                                    }
                                  }
                                >
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          域名
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            已部署证书
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            是否已经预约
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                className="ant-table-tbody"
                              />
                            </table>
                          </div>
                          <div
                            className="ant-table-placeholder"
                          >
                            <span>
                              暂无 CDN 域名可部署，
                              <a
                                className="comp-router-link"
                                href="/cdn/domain/create"
                                onClick={[Function]}
                                target="_blank"
                              >
                                立即去创建
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with no info 1`] = `
<div
  className="comp-page-wrapper"
>
  <div
    className="comp-breadcrumb-wrapper"
  >
    <div
      className="icecream-breadcrumb"
    />
  </div>
  <div
    className=""
  >
    <div
      className="comp-page-content"
    >
      <div
        className="comp-cert-detail"
      >
        <div
          className="detail-content-wrapper"
        >
          <form
            className="ant-form ant-form-horizontal cert-detail-form"
            onSubmit={[Function]}
          >
            <div
              className="comp-layout-block"
            >
              <h3
                className="layout-block-title"
              >
                订单信息
              </h3>
              <div
                className="layout-block-content"
              >
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="订单号"
                    >
                      订单号
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        123
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书备注名"
                    >
                      证书备注名
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          --
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="产品名称"
                    >
                      产品名称
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          --
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="创建时间"
                    >
                      创建时间
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          --
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="订单状态"
                    >
                      订单状态
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        />
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="证书有效期"
                    >
                      证书有效期
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          --
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="域名额度"
                    >
                      域名额度
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <span
                          className="qn-form-text"
                        >
                          --
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-label"
                  >
                    <label
                      className="ant-form-item-no-colon"
                      htmlFor={null}
                      onClick={[Function]}
                      title="已绑定域名"
                    >
                      已绑定域名
                    </label>
                  </div>
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="qn-form-text"
                        >
                          未绑定
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ant-row ant-form-item cert-form-item"
                >
                  <div
                    className="ant-col ant-form-item-control-wrapper"
                  >
                    <div
                      className="ant-form-item-control"
                    >
                      <span
                        className="ant-form-item-children"
                      >
                        <div
                          className="explain-text"
                        >
                          <i>
                            *名词解释：
                          </i>
                          “标准域名”例如：www.qiniu.com; qiniu.com；"泛域名"例如：*.qiniu.com; *.abc.qiniu.com
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            className="comp-layout-block"
            style={
              Object {
                "borderBottom": "none",
              }
            }
          >
            <h3
              className="layout-block-title"
            >
              <span>
                部署 CDN
                <i
                  aria-label="icon: info-circle"
                  className="anticon anticon-info-circle tip-icon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="info-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </i>
              </span>
            </h3>
            <div
              className="layout-block-content"
            >
              <div
                className="deploy-appointment-wrapper"
              >
                <div
                  className="ant-table-wrapper"
                >
                  <div
                    className="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
                      >
                        <span
                          className="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                          <i
                            className="ant-spin-dot-item"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="ant-spin-container ant-spin-blur"
                    >
                      <div
                        className="ant-table ant-table-default ant-table-empty ant-table-scroll-position-left"
                        style={Object {}}
                      >
                        <div
                          className="ant-table-content"
                        >
                          <div
                            className="ant-table-body"
                            onScroll={[Function]}
                            onWheel={[Function]}
                            style={Object {}}
                          >
                            <table
                              className=""
                              style={Object {}}
                            >
                              <colgroup>
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                                <col
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                      "width": undefined,
                                    }
                                  }
                                />
                              </colgroup>
                              <thead
                                className="ant-table-thead"
                              >
                                <tr
                                  style={
                                    Object {
                                      "height": null,
                                    }
                                  }
                                >
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          域名
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            已部署证书
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                  <th
                                    className=""
                                  >
                                    <span
                                      className="ant-table-header-column"
                                    >
                                      <div>
                                        <span
                                          className="ant-table-column-title"
                                        >
                                          <span>
                                            是否已经预约
                                            <i
                                              aria-label="icon: info-circle"
                                              className="anticon anticon-info-circle tip-icon"
                                              onMouseEnter={[Function]}
                                              onMouseLeave={[Function]}
                                            >
                                              <svg
                                                aria-hidden="true"
                                                className=""
                                                data-icon="info-circle"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                                />
                                                <path
                                                  d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                                />
                                              </svg>
                                            </i>
                                          </span>
                                        </span>
                                        <span
                                          className="ant-table-column-sorter"
                                        />
                                      </div>
                                    </span>
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                className="ant-table-tbody"
                              />
                            </table>
                          </div>
                          <div
                            className="ant-table-placeholder"
                          >
                            <span>
                              暂无 CDN 域名可部署，
                              <a
                                className="comp-router-link"
                                href="/cdn/domain/create"
                                onClick={[Function]}
                                target="_blank"
                              >
                                立即去创建
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
